--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^2.2.5",
     "nodemon": "^2.0.7",
     "sequelize": "^6.6.2",
+    "socket.io": "^4.2.0",
     "uuid": "^8.3.2"
   }
 }
